--- a/homework0.ipynb
+++ b/homework0.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,20 @@
     "    SALTY_SEVEN = \"Salty 777 Hypercar\"\n",
     "\n",
     "class Car:\n",
-    "    #TODO: implement the Car class below\n",
-    "    pass # remove this line when you implement the rest of the class  \n",
+    "    def __init__(self,car_model,max_gas_tank,current_gas_tank,mpg,cost_per_refill\n",
+    "                 ,capacity,price_per_mile,total_miles_driven,max_miles,purchased_price,license_plate):\n",
+    "        self.car_model = car_model\n",
+    "        self.max_gas_tank = max_gas_tank\n",
+    "        self.current_gas_tank = current_gas_tank\n",
+    "        self.mpg = mpg\n",
+    "        self.cost_per_refill = cost_per_refill\n",
+    "        self.capacity = capacity\n",
+    "        self.price_per_mile = price_per_mile\n",
+    "        self.total_miles_driven = 0\n",
+    "        self.max_miles = max_miles\n",
+    "        self.purchased_price = purchased_price\n",
+    "        self.license_plate = license_plate\n",
+    "\n",
     "\n",
     "    def __repr__(self):\n",
     "        return self.license_plate #NOTE: please use this variable name for your license plate"
@@ -1331,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
