--- a/homework0.ipynb
+++ b/homework0.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,10 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from typing import List, Dict, Tuple\n",
     "\n",
     "\n",
@@ -138,44 +139,34 @@
     "        self.cars = [car for car in self.cars if car.total_miles_driven < car.max_miles]\n",
     "        \n",
     "\n",
-    "    def get_top_car_preferences(\n",
-    "        self, preferences: Dict[str, Tuple[any, int]]\n",
-    "    ) -> List[Car]:\n",
-    "        \"\"\"\n",
-    "        This method will return the top car preferences based on the preferences dictionary.\n",
-    "        \"\"\"\n",
+    "    def get_top_car_preferences(self, preferences: Dict[str, Tuple[any, int]]) -> List[Car]:\n",
+    "\n",
     "        sorted_preferences = sorted(preferences.items(), key=lambda item: item[1][1])\n",
     "\n",
-    "        matched_cars = []\n",
-    "\n",
+    "        cars_preferences = []\n",
+    "        \n",
+    "        # If car is not in the garage, return empty list\n",
     "        if \"car_model\" in preferences:\n",
-    "            car_model_preference, _ = preferences[\"car_model\"]\n",
-    "            matching_cars = [car for car in self.cars if car.car_model == car_model_preference]\n",
-    "            if not matching_cars:\n",
+    "            if not any(car.car_model == preferences[\"car_model\"][0] for car in self.cars):\n",
     "                return []\n",
+    "            \n",
+    "        # Loop through every car\n",
+    "        for car in self.cars:\n",
+    "            car_attri = [car]\n",
+    "            for attribute, (user_prefer, _) in sorted_preferences:\n",
+    "                if hasattr(car, attribute):\n",
+    "                    car_value = getattr(car, attribute)\n",
+    "                    if attribute == \"car_model\":\n",
+    "                        car_attri.append(1 if car_value == user_prefer else 2)\n",
+    "                    else:\n",
+    "                        car_attri.append(abs(car_value - user_prefer))\n",
+    "                else:\n",
+    "                    car_attri.append(float('inf'))\n",
     "\n",
-    "        for preference_key, (preference_value, _) in sorted_preferences:\n",
-    "            if preference_key != \"car_model\":\n",
-    "                available_cars = [car for car in self.cars if car not in matched_cars]\n",
-    "                if not available_cars:\n",
-    "                    return matched_cars\n",
+    "            cars_preferences.append(car_attri)\n",
     "\n",
-    "                sorted_cars = sorted(\n",
-    "                    available_cars,\n",
-    "                    key=lambda car: abs(getattr(car, preference_key) - preference_value),\n",
-    "                )\n",
-    "\n",
-    "                matched_cars.append(sorted_cars[0])\n",
-    "\n",
-    "        if \"car_model\" in preferences:\n",
-    "            car_model_preference, _ = preferences[\"car_model\"]\n",
-    "            matching_cars = [car for car in self.cars if car.car_model == car_model_preference and car not in matched_cars]\n",
-    "            if not matching_cars:\n",
-    "                return matched_cars\n",
-    "\n",
-    "            matched_cars.extend(matching_cars)\n",
-    "\n",
-    "        return matched_cars"
+    "        sorted_cars = [car_details[0] for car_details in sorted(cars_preferences, key=lambda x: x[1:])]\n",
+    "        return sorted_cars\n"
    ]
   },
   {
@@ -258,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -650,9 +641,13 @@
      "output_type": "stream",
      "text": [
       "D [HATCH303, MINI808, ELEC111, EEE005, DDD009, EEE015, DDD019]\n",
-      "F MINI808 HATCH303 SUV404 AAA001 EEE005\n",
-      "EEE010 EEE015 EEE020\n",
-      "G 0.2808987519871482\n",
+      "F MINI808 HATCH303 DDD009 EEE015 EEE005\n",
+      "DDD019 VAN606 WHO002 TRCK010 AAA011\n",
+      "AAA001 BBB017 CCC013 SUV404 BBB007\n",
+      "CSTM212 CCC003 BBB012 AAA006 PICK505\n",
+      "EEE010 AAA016 DDD004 LIMO909 DDD014\n",
+      "CCC018 CCC008 CNVRT707 EEE020 ELEC111\n",
+      "G -0.2808987519871482\n",
       "H -299084900.0\n"
      ]
     }
@@ -755,15 +750,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after function definition on line 4 (3244253414.py, line 7)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[558], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    def __repr__(self):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 4\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/frankli/Documents/BU/CS506/homework-0-FrankLi3/homework0.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/frankli/Documents/BU/CS506/homework-0-FrankLi3/homework0.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/frankli/Documents/BU/CS506/homework-0-FrankLi3/homework0.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mBoard\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/frankli/Documents/BU/CS506/homework-0-FrankLi3/homework0.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/frankli/Documents/BU/CS506/homework-0-FrankLi3/homework0.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m#TODO: implement this method\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
