add name and UID

--- a/homework0.ipynb
+++ b/homework0.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Homework 0 (100 points)\n",
     "\n",
-    "**Name and BUID of everyone in your group:** ...\n",
+    "**Name and BUID of everyone in your group:** Qinfeng Li U84055774\n",
     "\n",
     "The goal of this homework is to practice programming in python. This homework is a bit longer than the rest of the homeworks in this course.\n",
     "\n",
